[package]
name = "rdom"
description = "A Rust-based simulated DOM (browser-independent replacement for web_sys)"
version = "0.1.0"
authors = ["Philip Peterson <philip.c.peterson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downcast-rs = "1.2.0"
lazy_static = "1.3.0"
once_cell = "1.7.2"
thiserror = "1"
