[package]
name = "rdom"
description = "A Rust-based simulated DOM (browser-independent replacement for web_sys)"
repository = "https://github.com/philip-peterson/rdom/"
version = "0.1.3"
authors = ["Philip Peterson <philip.c.peterson@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downcast-rs = "1.2.0"
lazy_static = "1.3.0"
once_cell = "1.7.2"
paste = "1.0.5"
thiserror = "1"
